--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="googlebot" content="noindex, nofollow">
     <link rel="icon" type="favicon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wawa Sensei Book Slider</title>
+    <title>Ocular</title>
   </head>
   <body>
     <div id="root"></div>
